Fixed alignments of label position for forms

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -677,7 +677,7 @@ form .select-wrapper .select-dropdown {
     top: 0px;
 }
 .label-position{
-    margin-top:15px;
+    margin :15px 0 0 0;
 }
 .disabled-style{
     color: gainsboro;
